# nospam

./: README.md
Base/patch/: nospam.patch
Base/pkg/: maildrop-1.6.3.tar.bz2
FilterBase/patch/: XML-Simple.patch
FilterBase/pkg/: Simple.pm
License/: MakeLicense.pl  Makefile  README  demo.c  license.c  license.h
License/md5/: Makefile  global.h  md5.h  md5c.c  mddriver.c  mddriver.h
NoSPAM/: CHANGELOG  TODO
NoSPAM/Install/: MakeDist.pl  PatchMaker.pl  (+1 more)
mailadm/: SYSOPFirstLogin.php  addAdmin.php  adduser.php  admin.inc.php  adminlist.php  batchadduser.php  changeAdminPasswd.php  changePasswd.php  changeUserPasswd.php  controlBadAccount.php  controlBadDomain.php  controlBlackIP.php  controlGoodDomain.php  controlMFCheck.php  controlOpenRelay.php  controlRSS.php  controlSmtproute.php  controlWhiteIP.php  deleteAdmin.php  deleteUser.php  frames.php  groupsControl.php  index.php  login.php  logout.php  menu.php  modifyAdminPrivilidge.php  modifyUserInfo.php  searchUser.php  sendGroupMails.php  showadminlist.php  showuserlist.php  testsendmail.php  uploadAttach.php  userInfo.php  userlist.php  vpopadm.inc.php
wmail/: ChangeLog  INSTALL.html  Makefile.am  Makefile.in  NEWS.html  README.html  README.logindomainlist.html  aclocal.m4  automake.fix  configure  configure.in  dbobj.config.in  dbobj.h.in  install  sqwebmail.spec  sqwebmail.spec.in  sysconftool
wmail/ldapaddressbook/: Makefile.am  Makefile.in  configure  configure.in  ldapaddressbook.h  ldapsearch.in
wmail/makedat/: Makefile.am  Makefile.in  configure  configure.in  makedat.in  makedatprog.c
(+1073 files in other folders)
